--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
     <main> <!--comentario-->
@@ -15,6 +16,31 @@
         </div>
         <div class="nome">Juan Carlos</div>
         <link rel="stylesheet" href="css/main.css">
+
+        <div class="redes-sociais"><!--una caja para todos los iconos de redes sociales-->
+            <div class="icone">
+                <a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a><!--para abrir un link, blank=abrir otra pestaña-->
+                <span><a href="https://github.com/" target="_blank"><b>GitHub</b></a></span>
+            </div>
+            <div class="icone"> <!--instagram-->
+                <a href="https://www.instagram.com/" target="_blank"><i class="ph ph-instagram-logo"></i></a>
+                <span><a href="https://www.instagram.com/" target="_blank"><b>Instagram</b></a></span>
+            </div>
+            <div class="icone"> <!--facebook-->
+                <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><i class="ph ph-facebook-logo"></i></a>
+                <span><a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><b>Facebook</b></a></span>
+            </div>
+            <div class="icone"> <!--whattsapp-->
+                <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><i class="ph ph-whatsapp-logo"></i></a>
+                <span><a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><b>Whattsapp</b></a></span>
+            </div>
+            <div class="email"> <!--EMAIL, <a es para abrir link o archivo>-->
+                <a href="mailto:jsumiree@gmail.com"><i class="ph ph-envelope-simple"></i></a>   
+                <span><a href="mailto:jsumiree@gmail.com"><b>Email</b></a></span>
+            </div>
+            <!--<a href="algundocumentohtmlinterno.html" no precisa target></a>-->
+
+        </div>
 
     </main>
 </body>
