--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             <!--<a href="algundocumentohtmlinterno.html" no precisa target></a>-->
 
         </div>
+        <div class="imagem2">
+            <a href="https://www.dota2.com/home" target="_blank">
+            <img src="img/dota2.jpg" alt="Dota2"><!--alt=descripcion al señalar la imagen-->
+        </a>
+        </div>
+        
 
     </main>
 </body>
